src/SdlSharp.ImGui.Native/dear_bindings/dcimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImTextureRef_t ImTextureRef;
typedef unsigned long long ImU64;  
typedef struct ImFont_t ImFont;                                      
typedef struct ImFontAtlas_t ImFontAtlas;                            
typedef struct ImFontAtlasRect_t ImFontAtlasRect;                    
typedef struct ImFontConfig_t ImFontConfig;                          
typedef struct ImFontGlyphRangesBuilder_t ImFontGlyphRangesBuilder;  
typedef struct ImFontLoader_t ImFontLoader;                          
typedef struct ImTextureData_t ImTextureData;                        
typedef int ImFontAtlasFlags;       
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
typedef ImU64 ImTextureID;  
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);      
CIMGUI_API void ImGui_PlotLinesCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count);  
CIMGUI_API void ImGui_PlotHistogramCallbackEx(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
typedef enum
{
    ImGuiBackendFlags_None                 = 0,
    ImGuiBackendFlags_HasGamepad           = 1<<0,  
    ImGuiBackendFlags_HasMouseCursors      = 1<<1,  
    ImGuiBackendFlags_HasSetMousePos       = 1<<2,  
    ImGuiBackendFlags_RendererHasVtxOffset = 1<<3,  
    ImGuiBackendFlags_RendererHasTextures  = 1<<4,  
} ImGuiBackendFlags_;
typedef enum
{
    ImTextureFormat_RGBA32,  
    ImTextureFormat_Alpha8,  
} ImTextureFormat;
struct ImTextureData_t
{
    int                    UniqueID;              
    ImTextureStatus        Status;                
    void*                  BackendUserData;       
    ImTextureID            TexID;                 
    ImTextureFormat        Format;                
    int                    Width;                 
    int                    Height;                
    int                    BytesPerPixel;         
    unsigned char*         Pixels;                
    ImTextureRect          UsedRect;              
    ImTextureRect          UpdateRect;            
    ImVector_ImTextureRect Updates;               
    int                    UnusedFrames;          
    unsigned short         RefCount;              
    bool                   UseColors;             
    bool                   WantDestroyNextFrame;  
};
struct ImFontConfig_t
{
    char                Name[40];              
    void*               FontData;              
    int                 FontDataSize;          
    bool                FontDataOwnedByAtlas;  
    bool                MergeMode;             
    bool                PixelSnapH;            
    bool                PixelSnapV;            
    ImS8                OversampleH;           
    ImS8                OversampleV;           
    ImWchar             EllipsisChar;          
    float               SizePixels;            
    const ImWchar*      GlyphRanges;           
    const ImWchar*      GlyphExcludeRanges;    
    ImVec2              GlyphOffset;           
    float               GlyphMinAdvanceX;      
    float               GlyphMaxAdvanceX;      
    float               GlyphExtraAdvanceX;    
    ImU32               FontNo;                
    unsigned int        FontLoaderFlags;       
    float               RasterizerMultiply;    
    float               RasterizerDensity;     
    ImFontFlags         Flags;                 
    ImFont*             DstFont;               
    const ImFontLoader* FontLoader;            
    void*               FontLoaderData;        
};
struct ImFontGlyphRangesBuilder_t
{
    ImVector_ImU32 UsedChars;  
};
struct ImFontAtlasRect_t
{
    unsigned short x, y;      
    unsigned short w, h;      
    ImVec2         uv0, uv1;  
};
typedef enum
{
    ImFontAtlasFlags_None               = 0,
    ImFontAtlasFlags_NoPowerOfTwoHeight = 1<<0,  
    ImFontAtlasFlags_NoMouseCursors     = 1<<1,  
    ImFontAtlasFlags_NoBakedLines       = 1<<2,  
} ImFontAtlasFlags_;
struct ImFontAtlas_t
{
    ImFontAtlasFlags          Flags;                                          
    ImTextureFormat           TexDesiredFormat;                               
    int                       TexGlyphPadding;                                
    int                       TexMinWidth;                                    
    int                       TexMinHeight;                                   
    int                       TexMaxWidth;                                    
    int                       TexMaxHeight;                                   
    void*                     UserData;                                       
#ifdef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImTextureRef              TexRef;                                         
#else
    union                     
    {
        ImTextureRef TexRef;
        ImTextureRef TexID;
    };
#endif 
    ImTextureData*            TexData;                                        
    ImVector_ImTextureDataPtr TexList;                                        
    bool                      Locked;                                         
    bool                      RendererHasTextures;                            
    bool                      TexIsBuilt;                                     
    bool                      TexPixelsUseColors;                             
    ImVec2                    TexUvScale;                                     
    ImVec2                    TexUvWhitePixel;                                
    ImVector_ImFontPtr        Fonts;                                          
    ImVector_ImFontConfig     Sources;                                        
    ImVec4                    TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX+1];  
    int                       TexNextUniqueID;                                
    int                       FontNextUniqueID;                               
    ImVector_ImDrawListSharedDataPtr DrawListSharedDatas;                     
    ImFontAtlasBuilder*       Builder;                                        
    const ImFontLoader*       FontLoader;                                     
    const char*               FontLoaderName;                                 
    void*                     FontLoaderData;                                 
    unsigned int              FontLoaderFlags;                                
    int                       RefCount;                                       
    ImGuiContext*             OwnerContext;                                   
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    ImFontAtlasRect           TempRect;                                       
#endif 
};
CIMGUI_API ImFont*           ImFontAtlas_AddFont(ImFontAtlas* self, const ImFontConfig* font_cfg);
CIMGUI_API ImFont*           ImFontAtlas_AddFontDefault(ImFontAtlas* self, const ImFontConfig* font_cfg );
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromFileTTF(ImFontAtlas* self, const char* filename, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges );
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromMemoryTTF(ImFontAtlas* self, void* font_data, int font_data_size, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges ); 
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromMemoryCompressedTTF(ImFontAtlas* self, const void* compressed_font_data, int compressed_font_data_size, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges ); 
CIMGUI_API ImFont*           ImFontAtlas_AddFontFromMemoryCompressedBase85TTF(ImFontAtlas* self, const char* compressed_font_data_base85, float size_pixels , const ImFontConfig* font_cfg , const ImWchar* glyph_ranges ); 
CIMGUI_API void              ImFontAtlas_RemoveFont(ImFontAtlas* self, ImFont* font);
CIMGUI_API void              ImFontAtlas_Clear(ImFontAtlas* self);                                                                      
CIMGUI_API void              ImFontAtlas_CompactCache(ImFontAtlas* self);                                                               
CIMGUI_API void              ImFontAtlas_SetFontLoader(ImFontAtlas* self, const ImFontLoader* font_loader);                             
CIMGUI_API void              ImFontAtlas_ClearInputData(ImFontAtlas* self);                                                             
CIMGUI_API void              ImFontAtlas_ClearFonts(ImFontAtlas* self);                                                                 
CIMGUI_API void              ImFontAtlas_ClearTexData(ImFontAtlas* self);                                                               
CIMGUI_API bool ImFontAtlas_Build(ImFontAtlas* self);                                  
CIMGUI_API void ImFontAtlas_GetTexDataAsAlpha8(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel ); 
CIMGUI_API void ImFontAtlas_GetTexDataAsRGBA32(ImFontAtlas* self, unsigned char** out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel ); 
CIMGUI_API void ImFontAtlas_SetTexID(ImFontAtlas* self, ImTextureID id);               
CIMGUI_API void ImFontAtlas_SetTexIDImTextureRef(ImFontAtlas* self, ImTextureRef id);  
CIMGUI_API bool ImFontAtlas_IsBuilt(const ImFontAtlas* self);                          
CIMGUI_API const ImWchar*    ImFontAtlas_GetGlyphRangesDefault(ImFontAtlas* self);                                                      
CIMGUI_API const ImWchar* ImFontAtlas_GetGlyphRangesGreek(ImFontAtlas* self);                    
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             OwnerAtlas;                                            
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ComboObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count); 
CIMGUI_API bool   ImGui_ListBoxObsoleteEx(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );