src/Sdl3Sharp.ImGui/Native/ImFontAtlas.cs

// <auto-generated>
// This file was generated by SdlSharp.ImGui.Generator
// Do not modify this file directly.
// </auto-generated>

#nullable enable

using System.Runtime.InteropServices;

namespace SdlSharp.ImGui.Native;

/// <summary>
/// Load and rasterize multiple TTF/OTF fonts into a same texture. The font atlas will build a single texture holding:
/// - One or more fonts.
/// - Custom graphics data needed to render the shapes needed by Dear ImGui.
/// - Mouse cursor shapes for software cursor rendering (unless setting 'Flags |= ImFontAtlasFlags_NoMouseCursors' in the font atlas).
/// - If you don't call any AddFont*** functions, the default font embedded in the code will be loaded for you.
/// It is the rendering backend responsibility to upload texture into your graphics API:
/// - ImGui_ImplXXXX_RenderDrawData() functions generally iterate platform_io-&gt;Textures[] to create/update/destroy each ImTextureData instance.
/// - Backend then set ImTextureData's TexID and BackendUserData.
/// - Texture id are passed back to you during rendering to identify the texture. Read FAQ entry about ImTextureID/ImTextureRef for more details.
/// Legacy path:
/// - Call Build() + GetTexDataAsAlpha8() or GetTexDataAsRGBA32() to build and retrieve pixels data.
/// - Call SetTexID(my_tex_id); and pass the pointer/identifier to your texture in a format natural to your graphics API.
/// Common pitfalls:
/// - If you pass a 'glyph_ranges' array to AddFont*** functions, you need to make sure that your array persist up until the
/// atlas is build (when calling GetTexData*** or Build()). We only copy the pointer, not the data.
/// - Important: By default, AddFontFromMemoryTTF() takes ownership of the data. Even though we are not writing to it, we will free the pointer on destruction.
/// You can set font_cfg-&gt;FontDataOwnedByAtlas=false to keep ownership of your data and it won't be freed,
/// - Even though many functions are suffixed with "TTF", OTF data is supported just as well.
/// - This is an old API and it is currently awkward for those and various other reasons! We will address them in the future!
/// </summary>
[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct ImFontAtlas
{
    /// <summary>
    /// Input
    /// Build flags (see ImFontAtlasFlags_)
    /// </summary>
    public ImFontAtlasFlags Flags;

    /// <summary>
    /// Desired texture format (default to ImTextureFormat_RGBA32 but may be changed to ImTextureFormat_Alpha8).
    /// </summary>
    public ImTextureFormat TexDesiredFormat;

    /// <summary>
    /// FIXME: Should be called "TexPackPadding". Padding between glyphs within texture in pixels. Defaults to 1. If your rendering method doesn't rely on bilinear filtering you may set this to 0 (will also need to set AntiAliasedLinesUseTex = false).
    /// </summary>
    public int TexGlyphPadding;

    /// <summary>
    /// Minimum desired texture width. Must be a power of two. Default to 512.
    /// </summary>
    public int TexMinWidth;

    /// <summary>
    /// Minimum desired texture height. Must be a power of two. Default to 128.
    /// </summary>
    public int TexMinHeight;

    /// <summary>
    /// Maximum desired texture width. Must be a power of two. Default to 8192.
    /// </summary>
    public int TexMaxWidth;

    /// <summary>
    /// Maximum desired texture height. Must be a power of two. Default to 8192.
    /// </summary>
    public int TexMaxHeight;

    /// <summary>
    /// Store your own atlas related user-data (if e.g. you have multiple font atlas).
    /// </summary>
    public nint UserData;

    /// <summary>
    /// Latest texture identifier == TexData-&gt;GetTexRef().
    /// </summary>
    public ImTextureRef TexRef;

    /// <summary>
    /// Latest texture.
    /// </summary>
    public ImTextureData* TexData;

    /// <summary>
    /// Legacy: You can request your rectangles to be mapped as font glyph (given a font + Unicode point), so you can render e.g. custom colorful icons and use them as regular glyphs. --&gt; Prefer using a custom ImFontLoader.
    /// For old GetCustomRectByIndex() API
    /// </summary>
    public ImFontAtlasRect TempRect;

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddFont")]
    public static partial ImFont* AddFont(ImFontAtlas* self, ImFontConfig* font_cfg);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddFontDefault")]
    public static partial ImFont* AddFontDefault(ImFontAtlas* self, ImFontConfig* font_cfg);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddFontFromFileTTF")]
    public static partial ImFont* AddFontFromFileTTF(ImFontAtlas* self, [MarshalAs(UnmanagedType.LPUTF8Str)] string filename, float size_pixels, ImFontConfig* font_cfg, ushort* glyph_ranges);

    /// <summary>
    /// Note: Transfer ownership of 'ttf_data' to ImFontAtlas! Will be deleted after destruction of the atlas. Set font_cfg-&gt;FontDataOwnedByAtlas=false to keep ownership of your data and it won't be freed.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddFontFromMemoryTTF")]
    public static partial ImFont* AddFontFromMemoryTTF(ImFontAtlas* self, nint font_data, int font_data_size, float size_pixels, ImFontConfig* font_cfg, ushort* glyph_ranges);

    /// <summary>
    /// 'compressed_font_data' still owned by caller. Compress with binary_to_compressed_c.cpp.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddFontFromMemoryCompressedTTF")]
    public static partial ImFont* AddFontFromMemoryCompressedTTF(ImFontAtlas* self, nint compressed_font_data, int compressed_font_data_size, float size_pixels, ImFontConfig* font_cfg, ushort* glyph_ranges);

    /// <summary>
    /// 'compressed_font_data_base85' still owned by caller. Compress with binary_to_compressed_c.cpp with -base85 parameter.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_AddFontFromMemoryCompressedBase85TTF")]
    public static partial ImFont* AddFontFromMemoryCompressedBase85TTF(ImFontAtlas* self, [MarshalAs(UnmanagedType.LPUTF8Str)] string compressed_font_data_base85, float size_pixels, ImFontConfig* font_cfg, ushort* glyph_ranges);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_RemoveFont")]
    public static partial void RemoveFont(ImFontAtlas* self, ImFont* font);

    /// <summary>
    /// Clear everything (input fonts, output glyphs/textures).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_Clear")]
    public static partial void Clear(ImFontAtlas* self);

    /// <summary>
    /// Compact cached glyphs and texture.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_CompactCache")]
    public static partial void CompactCache(ImFontAtlas* self);

    /// <summary>
    /// Change font loader at runtime.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_SetFontLoader")]
    public static partial void SetFontLoader(ImFontAtlas* self, ImFontLoader font_loader);

    /// <summary>
    /// As we are transitioning toward a new font system, we expect to obsolete those soon:
    /// [OBSOLETE] Clear input data (all ImFontConfig structures including sizes, TTF data, glyph ranges, etc.) = all the data used to build the texture and fonts.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_ClearInputData")]
    public static partial void ClearInputData(ImFontAtlas* self);

    /// <summary>
    /// [OBSOLETE] Clear input+output font data (same as ClearInputData() + glyphs storage, UV coordinates).
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_ClearFonts")]
    public static partial void ClearFonts(ImFontAtlas* self);

    /// <summary>
    /// [OBSOLETE] Clear CPU-side copy of the texture data. Saves RAM once the texture has been copied to graphics memory.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_ClearTexData")]
    public static partial void ClearTexData(ImFontAtlas* self);

    /// <summary>
    /// Legacy path for build atlas + retrieving pixel data.
    /// - User is in charge of copying the pixels into graphics memory (e.g. create a texture with your engine). Then store your texture handle with SetTexID().
    /// - The pitch is always = Width * BytesPerPixels (1 or 4)
    /// - Building in RGBA32 format is provided for convenience and compatibility, but note that unless you manually manipulate or copy color data into
    /// the texture (e.g. when using the AddCustomRect*** api), then the RGB pixels emitted will always be white (~75% of memory/bandwidth waste).
    /// - From 1.92 with backends supporting ImGuiBackendFlags_RendererHasTextures:
    /// - Calling Build(), GetTexDataAsAlpha8(), GetTexDataAsRGBA32() is not needed.
    /// - In backend: replace calls to ImFontAtlas::SetTexID() with calls to ImTextureData::SetTexID() after honoring texture creation.
    /// Build pixels data. This is called automatically for you by the GetTexData*** functions.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_Build")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool Build(ImFontAtlas* self);

    /// <summary>
    /// 1 byte per-pixel
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetTexDataAsAlpha8")]
    public static partial void GetTexDataAsAlpha8(ImFontAtlas* self, nint out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel);

    /// <summary>
    /// 4 bytes-per-pixel
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetTexDataAsRGBA32")]
    public static partial void GetTexDataAsRGBA32(ImFontAtlas* self, nint out_pixels, int* out_width, int* out_height, int* out_bytes_per_pixel);

    /// <summary>
    /// Called by legacy backends. May be called before texture creation.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_SetTexID")]
    public static partial void SetTexID(ImFontAtlas* self, ImTextureID id);

    /// <summary>
    /// Called by legacy backends.
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_SetTexIDImTextureRef")]
    public static partial void SetTexID(ImFontAtlas* self, ImTextureRef id);

    /// <summary>
    /// Bit ambiguous: used to detect when user didn't build texture but effectively we should check TexID != 0 except that would be backend dependent..
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_IsBuilt")]
    [return: MarshalAs(UnmanagedType.U1)]
    public static partial bool IsBuilt(ImFontAtlas* self);

    /// <summary>
    /// Since 1.92: specifying glyph ranges is only useful/necessary if your backend doesn't support ImGuiBackendFlags_RendererHasTextures!
    /// Basic Latin, Extended Latin
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesDefault")]
    public static partial ushort* GetGlyphRangesDefault(ImFontAtlas* self);

    /// <summary>
    /// Helpers to retrieve list of common Unicode ranges (2 value per range, values are inclusive, zero-terminated list)
    /// NB: Make sure that your string are UTF-8 and NOT in your local code page.
    /// Read https://github.com/ocornut/imgui/blob/master/docs/FONTS.md/#about-utf-8-encoding for details.
    /// NB: Consider using ImFontGlyphRangesBuilder to build glyph ranges from textual data.
    /// Default + Greek and Coptic
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImFontAtlas_GetGlyphRangesGreek")]
    public static partial ushort* GetGlyphRangesGreek(ImFontAtlas* self);
